Remap props to webapi

--- a/jam4pipeline.csproj
+++ b/jam4pipeline.csproj
@@ -60,6 +60,14 @@
     <None Include="src\app\routes\home\columns.loans.json" />
     <None Include="src\app\routes\home\columns.resubmissions.json" />
     <None Include="src\app\routes\home\home.component.scss" />
+    <None Include="src\app\routes\jam4pipeline\components\modals\assign\assign.component.scss" />
+    <None Include="src\app\routes\jam4pipeline\components\modals\document-upload\document-upload.component.scss" />
+    <None Include="src\app\routes\jam4pipeline\components\modals\tasks-modal\tasks-modal.component.scss" />
+    <None Include="src\app\routes\jam4pipeline\components\state\state.component.scss" />
+    <None Include="src\app\routes\jam4pipeline\components\tasks\tasks.component.scss" />
+    <None Include="src\app\routes\jam4pipeline\components\users\users.component.scss" />
+    <None Include="src\app\routes\jam4pipeline\routes\dashboard\dashboard.component.scss" />
+    <None Include="src\app\routes\jam4pipeline\routes\manager\manager.component.scss" />
     <None Include="src\app\routes\loan\loan.component.scss" />
     <None Include="src\app\routes\qa\qa.component.scss" />
     <None Include="src\app\routes\viewer\viewer.component.scss" />
@@ -113,6 +121,14 @@
     <Content Include="src\app\components\viewer\viewer.component.html" />
     <Content Include="src\app\components\web-tool\web-tool.component.html" />
     <Content Include="src\app\routes\home\home.component.html" />
+    <Content Include="src\app\routes\jam4pipeline\components\modals\assign\assign.component.html" />
+    <Content Include="src\app\routes\jam4pipeline\components\modals\document-upload\document-upload.component.html" />
+    <Content Include="src\app\routes\jam4pipeline\components\modals\tasks-modal\tasks-modal.component.html" />
+    <Content Include="src\app\routes\jam4pipeline\components\state\state.component.html" />
+    <Content Include="src\app\routes\jam4pipeline\components\tasks\tasks.component.html" />
+    <Content Include="src\app\routes\jam4pipeline\components\users\users.component.html" />
+    <Content Include="src\app\routes\jam4pipeline\routes\dashboard\dashboard.component.html" />
+    <Content Include="src\app\routes\jam4pipeline\routes\manager\manager.component.html" />
     <Content Include="src\app\routes\loan\loan.component.html" />
     <Content Include="src\app\routes\login\login.component.html" />
     <Content Include="src\app\routes\no-content\no-content.component.html" />
@@ -186,6 +202,29 @@
     <TypeScriptCompile Include="src\app\routes\home\home.module.ts" />
     <TypeScriptCompile Include="src\app\routes\home\home.routes.ts" />
     <TypeScriptCompile Include="src\app\routes\index.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\modals\assign\assign.component.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\modals\document-upload\document-upload.component.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\modals\document-upload\document-upload.component.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\modals\tasks-modal\tasks-modal.component.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\modals\tasks-modal\tasks-modal.component.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\state\state.component.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\state\state.component.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\tasks\tasks.component.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\tasks\tasks.component.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\users\users.component.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\components\users\users.component.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\jam4pipeline.module.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\jam4pipeline.module.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\jam4pipeline.routes.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\routes\dashboard\dashboard.component.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\routes\dashboard\dashboard.component.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\routes\manager\manager.component.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\routes\manager\manager.component.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\shared\jam4pipeline.models.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\shared\jam4pipeline.service.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\shared\jam4pipeline.service.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\shared\modals.service.spec.ts" />
+    <TypeScriptCompile Include="src\app\routes\jam4pipeline\shared\modals.service.ts" />
     <TypeScriptCompile Include="src\app\routes\loan\loan.component.ts" />
     <TypeScriptCompile Include="src\app\routes\login\login.component.spec.ts" />
     <TypeScriptCompile Include="src\app\routes\login\login.component.ts" />
